# PINNs-RL-PDE

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  config.py  config.yaml  dashboard.py  index.html  interactive_trainer.py  mkdocs.yml  model.pth  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  train_heat_equation.py
.github/ISSUE_TEMPLATE/: bug_report.md  new_pde.md
.github/workflows/: black-format.yml  checks.yml  docs.yml  publish.yml
ARCHITECTURE/: index.html
api/: index.html
api/config/: index.html
api/neural_networks/: index.html
api/pdes/: index.html
api/rl/: index.html
api/training/: index.html
api/utils/: index.html
dashboard/: index.html
datasets/: index.html
docs/: ARCHITECTURE.md  dashboard.md  datasets.md  index.md  inverse_problems.md  roadmap.md  sampling_strategies.md  setup.md  start_here.md  visualization.md
docs/api/: config.md  index.md  neural_networks.md  pdes.md  rl.md  training.md  utils.md
experiments/: benchmark_pdes.py  run_all_architectures.py  train_heat_equation.py
inverse_problems/: index.html
notebooks/: 01_your_first_pinn.ipynb  02_comparing_architectures.ipynb  03_rl_vs_uniform_sampling.ipynb  04_well_dataset_quickstart.ipynb  05_inverse_problem.ipynb  PINN_intro_workshop.ipynb  panel_tighten.py  sampling_techniques.ipynb
pinnrl/: __init__.py  dashboard.py  main.py
pinnrl/benchmarks/: __init__.py  cli.py  fdm.py  sampling.py
pinnrl/components/: adaptive_weights.py
pinnrl/config/: __init__.py  config.yaml
pinnrl/datasets/: __init__.py  registry.py  well_loader.py
pinnrl/neural_networks/: __init__.py  autoencoder.py  base_network.py  fno.py  fourier.py  siren.py
pinnrl/numerical_solvers/: heat_equation.ipynb  heat_equation_fdm.py
pinnrl/pdes/: __init__.py  black_scholes.py  burgers_equation.py  convection_equation.py  heat_equation.py  kdv_equation.py  pde_base.py  pendulum_equation.py
pinnrl/training/: train.py  trainer.py
pinnrl/utils/: utils.py
results/heat_eq_fourier_rl_a0.01_f2.0_20250327_210052/: model_config.json
results/heat_eq_uniform_a0.01_f2.0_20250327_190448/: final_metrics.npy
roadmap/: index.html
sampling_strategies/: index.html
scripts/: train.py
search/: search_index.json
setup/: index.html
src/: __init__.py  config.py  dashboard.py  interactive_trainer.py  main.py  pinn.py  rl_agent.py  trainer.py  utils.py
src/components/: adaptive_weights.py
src/config/: __init__.py  config.yaml
src/neural_networks/: __init__.py  attention.py  autoencoder.py  base_network.py  feedforward.py  fno.py  fourier.py  neural_networks.py  resnet.py  siren.py
src/numerical_solvers/: __init__.py  allen_cahn.ipynb  burgers_equation.ipynb  finite_difference_base.py  heat_equation.ipynb  heat_equation_fdm.py  navier_stokes.ipynb  pendulum_equation.ipynb
src/pdes/: __init__.py  allen_cahn.py  black_scholes.py  burgers_equation.py  cahn_hilliard.py  convection_equation.py  heat_equation.py  kdv_equation.py  pde_base.py  pendulum_equation.py  wave_equation.py
src/rl/: rl_agent.py
src/training/: __init__.py  train.py  trainer.py
src/utils/: __init__.py  types.py  utils.py
start_here/: index.html
tests/: test_pdes.py  test_utils.py
tests/test_components/: test_neural_networks.py  test_pde_sampling.py  test_pdes.py  test_rl_agent.py  test_utils.py
tests/unit_tests/: test_benchmarks.py  test_config.py  test_dataset_registry.py  test_fno_all_pdes.py  test_heat_2d_training.py  test_inverse_heat.py  test_loss_functions.py  test_neural_networks.py  test_observation_data_well_branch.py  test_pde_arch_matrix.py  test_pde_base_coverage.py  test_pde_sampling.py  test_pdes.py  test_rar_sampling.py  test_rl_agent.py  test_rl_coverage.py  test_train_data_modes.py  test_trainer.py  test_trainer_optimizers.py  test_utils.py  test_utils_coverage.py  test_well_dataset_defaults.py  test_well_loader.py
visualization/: index.html
