[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pinnrl"
version = "0.1.0"
description = "Physics-Informed Neural Networks with RL-based adaptive sampling for solving PDEs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pyyaml>=6.0",
    "gymnasium>=0.26.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "black>=21.7b0",
    "flake8>=3.9.0",
]
viz = [
    "plotly>=5.3.0",
    "dash>=3.0.2",
    "dash-bootstrap-components>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
